--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>vue-pro</title>
+    <style media="screen">
+        html,body {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
   </head>
   <body>
     <div id="app"></div>
